Fix change z-index of comic thumbnail element to make feature visible

--- a/src/Components/Comics/ComicThumbnail/ComicThumbnail.css
+++ b/src/Components/Comics/ComicThumbnail/ComicThumbnail.css
@@ -14,7 +14,7 @@
   right: 0px;
   bottom: 0px;
   border-left: 20px solid black;
-  z-index: -1;
+  z-index: 0;
 }
 
 .thumbnail-cover {
